header: fix logo color on mobile screen

--- a/src/styles/_header.styl
+++ b/src/styles/_header.styl
@@ -47,6 +47,9 @@
 .siteLogo-sm
   width 35px
   height 25px
+  
+.is-homepage .siteHeader.contrast .siteLogo-sm .siteLogo
+    fill $clr-primary
 
 // Animated hamburger menu icon
 .siteHeader-hamburger
